# provability

./: .gitignore  Agents.hs  Display.hs  Games.hs  LICENSE  Modal.hs  ModalAgents.hs  ModalCombat.hs  ModalEnvironment.hs  ModalFormulas.hs  ModalGameTools.hs  ModalGames.hs  ModalProgramming.hs  ModalPrograms.hs  Program.hs  Programs.hs  README.md  TODO.md  modal.hs  modalagents.cabal
agents/: standard.cd  target.ua  test.ua
src/: ModalAgents.hs  ModalCombat.hs  WebInterface.hs  base.env
src/Modal/: Agent.hs  Agents.hs  Code.hs  Combat.hs  Competition.hs  CompileContext.hs  CompilerBase.hs  Def.hs  Display.hs  Environment.hs  Formulas.hs  GameTools.hs  Games.hs  Parser.hs  Programming.hs  Programs.hs  Statement.hs  Universes.hs  Utilities.hs
src/WebInterface.jsexe/: index.html
