name:                ModalCombat
version:             0.0.1.0
synopsis:            Evaluates modal agents.
license:             MIT
license-file:        LICENSE
author:              Nate Soares
maintainer:          nate@intelligence.org
build-type:          Simple
cabal-version:       >=1.10

executable modalcombat
  extensions:          OverloadedStrings
  main-is:             ModalCombat.hs
  build-depends:
    containers >= 0.5,
    mtl >= 2.2.1,
    optparse-applicative >=0.10,
    parsec >= 3.1.7,
    text >= 1.1,
    transformers >= 0.4.1,
    base >=4.8
  hs-source-dirs:      src
  default-language:    Haskell2010
